<resources>
    <string name="app_name">App_RadioGroup_RadioButton</string>
    <string name="digite_el_primer_valor">Digite el primer valor</string>
    <string name="digite_el_segundo_valor">Digite el segundo valor</string>
    <string name="sumar">Sumar</string>
    <string name="restar">Restar</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="multiplicar">Multiplicar</string>
    <string name="dividir">Dividir</string>
</resources>